#4, #14: Download path made configurable
Also, download list now scrolls to the added row; updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,11 @@ project/build.properties
 
 # Development
 /_build
+/_downloads
 buildinfo.*
 
 # Application
-application.conf
-cache.conf
+maelstrom-downloader.prefs
 
 *.class
 *.log
