--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,5 +1,11 @@
 coverage:
-  range: "50...90"
+  range: "40...70"
+
+  status:
+    project:
+      default:
+        enabled:   true
+        threshold: 4
 
 flags:
   core:
