--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,19 @@ language: scala
 scala:
   - 2.12.3
 
+# Use container-based infrastructure
+sudo: false
+
+cache:
+  directories:
+    - $HOME/.sbt
+    - $HOME/.ivy2/cache
+
+before_cache:
+  # Cleanup the cached directories to avoid unnecessary cache updates
+  - find $HOME/.sbt        -name "*.lock"               -print -delete
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
+
 script:
   - sbt clean coverage test coverageReport
 
