--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_cache:
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
 
 script:
-  - sbt clean coverage test coverageReport
+  - sbt -J--add-opens=java.base/sun.security.ssl=ALL-UNNAMED clean coverage test coverageReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
